--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,9 +1,9 @@
 <table>
     <tr>
         <td><a href="/">Home</a></td>
-        <td><a href="/housing">Housing</a></td>
-        <td><a href="/food">Food</a></td>
-        <td><a href="/sports">Sports</a></td>
+        <td><a href="/housing">Stories</a></td>
+        <td><a href="/food">Make your own!</a></td>
+        <td><a href="/sports">Edit old Stories</a></td>
         <td><a href="/activities">Activities</a></td>
         <td><a href="/family-night">Family-Night</a></td>
         <td><a href="/gallery">Gallery</a></td>
