--- a/_includes/home.html
+++ b/_includes/home.html
@@ -6,6 +6,6 @@
         <td><a href="/sports">Edit old Stories</a></td>
         <td><a href="/activities">Activities</a></td>
         <td><a href="/family-night">Family-Night</a></td>
-        <td><a href="/gallery">Gallery</a></td>
+        <td><a href="/gallery">Sign In</a></td>
     </tr>
 </table>
