--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,9 +1,9 @@
 <table>
     <tr>
         <td><a href="/">Home</a></td>
-        <td><a href="/stories">Stories</a></td>
+        <td><a href="/housing">Stories</a></td>
         <td><a href="/food">Make your own!</a></td>
-        <td><a href="/edit">Edit old Stories</a></td>
-        <td><a href="/signin">Sign In</a></td>
+        <td><a href="/sports">Edit old Stories</a></td>
+        <td><a href="/gallery">Sign In</a></td>
     </tr>
 </table>
