--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,6 +1,6 @@
 <table>
     <tr>
-        <td><a href="/">Home</a></td>
+        <td><a href="/home">Home</a></td>
         <td><a href="/housing">Stories</a></td>
         <td><a href="/food">Make your own!</a></td>
         <td><a href="/sports">Edit old Stories</a></td>
