--- a/_includes/home.html
+++ b/_includes/home.html
@@ -2,8 +2,8 @@
     <tr>
         <td><a href="/home">Home</a></td>
         <td><a href="/stories2">Stories</a></td>
-        <td><a href="/food">Make your own!</a></td>
-        <td><a href="/sports">Edit old Stories</a></td>
+        <td><a href="/myo">Make your own!</a></td>
+        <td><a href="/edit">Edit old Stories</a></td>
         <td><a href="/signin">Sign In</a></td>
     </tr>
 </table>
